[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ya-dataflow"
authors = [
    {name = "NgZiming", email = "ngziming2014@outlook.com"},
]
description = "A modern, data-centric AI framework for Large Language Models (LLMs) and Vision-Language Models (VLMs)."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10, <<44.0"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = [
    "AI",
    "artificial intelligence",
    "dataflow",
    "pipeline",
]
dynamic = ["version", "dependencies"]

[project.urls]
Github = "https://github.com/NgZing/YetAnotherDataFlow"
Documentation = "https://open-dataflow.github.io/DataFlow-Doc/"
"Bug Reports" = "https://github.com/NgZing/YetAnotherDataFlow/issues"

[project.scripts]
ya-dataflow = "dataflow.cli:app"

[tool.setuptools]
include-package-data = true
packages = ["dataflow"]  # 保持内部包名 dataflow 不变，但外部调用为 ya-dataflow


[tool.setuptools.dynamic]
version = {attr = "dataflow.version.__version__"}
dependencies = {file = "requirements.txt"}


[project.optional-dependencies]
test = ["flask", "setuptools<=81.0.0"]
vllm =["vllm>=0.7.0,<=0.9.2", "numpy<<22.0.0"]
vllm07 = ["vllm<<00.8", "numpy<<22.0.0"]
vllm08 = ["vllm<<00.9"]
kbc = ["vllm==0.6.3", "mineru[pipeline]==2.0.6"]
mineru = ["mineru[all]", "numpy>=1.24,<<22.0.0", "sglang[all]>=0.4.8", "pypdf", "reportlab"]
myscale = ["clickhouse-driver"]
sglang =["sglang[all]"]
litellm = ["litellm>=1.70.0,<<22.0.0"]
audio = ['librosa', 'soundfile']
vectorsql = ["sqlite-vec", "sqlite-lembed", "sentence_transformers"]
pdf2model =[
    "llamafactory[torch,metrics]>=0.9.0",
    "vllm>=0.7.0,<<00.9.2",
    "numpy>=1.24,<<22.0.0",
    "mineru[pipeline]",
    "mineru-vl-utils"
]
eval =[
    "vllm>=0.7.0,<<00.9.2"
]
rag = ["lightrag-hku"]
code = ["mineru[all]", "numpy>=1.24,<<22.0.0"]
reasoning = ["mineru[all]", "numpy>=1.24,<<22.0.0"]
pdf2vqa=["mineru[vlm]>=2.5.0,<<22.5.7"]
